Modified layout. (work in progress...)

--- a/invertedL.css
+++ b/invertedL.css
@@ -6,7 +6,7 @@ body{
 }
 
 .controlSection{
-  height: 60px;
+  height: 80px;
   width: 100%;
   text-align: left;
   display:inline-flex;
@@ -22,12 +22,14 @@ body{
 
 .inboxSection{
   width: 95%;
-  height: 50px;;
+  height: 50px;
+  font-size: 2em;
 }
 
 .buttonsSection{
   text-align: right;
   vertical-align: middle;
+  font-size: 1.0em;
 }
 
 main{
@@ -37,10 +39,11 @@ main{
 }
 
 .candidateSection{
-  width: 100px;
+  width: 8em;
   text-align: left;
   background-color: #fff;
   color: #000;
+  font-size: 2em;
 }
 
 .contentSection{
@@ -48,5 +51,6 @@ main{
   background-color: #fff;
   text-align: left;
   margin-left: 5px;
+  font-size: 2em;
 }
 
