--- a/invertedL.css
+++ b/invertedL.css
@@ -1,6 +1,6 @@
 @font-face {
 font-family: "KouzanAndHentai";
-  src: url(font/KouzanSousho.woff2) format("woff2"), url(font/UniHentaiKana-Regular.woff2) format("woff2");
+  src: url(font/KouzanMouhituFontOTF.woff2.woff2) format("woff2"), url(font/UniHentaiKana-Regular.woff2) format("woff2");
 }
 
 body{
