--- a/invertedL.css
+++ b/invertedL.css
@@ -1,6 +1,6 @@
 @font-face {
 font-family: "KouzanAndHentai";
-  src: url(https://mmurak.github.io/HentaiGanaTransliterator/font/UniHentaiKana-Regular.woff2) format("woff2"), url(https://mmurak.github.io/HentaiGanaTransliterator/font/KouzanMouhituFontOTF.woff2) format("woff2");
+  src: url(https://mmurak.github.io/HentaiGanaTransliterator/font/UniHentaiKana-Regular.woff2) format("woff2"), url(https://mmurak.github.io/HentaiGanaTransliterator/font/KouzanMouhituFontOTF) format("woff2");
 }
 
 body{
