--- a/invertedL.css
+++ b/invertedL.css
@@ -1,6 +1,6 @@
 @font-face {
-font-family: "KouzanBrushFontOTF";
-  src: url(https://mmurak.github.io/HentaiGanaTransliterator/font/KouzanMouhituFontOTF) format("woff2");
+font-family: "KouzanSousho";
+  src: url(https://mmurak.github.io/HentaiGanaTransliterator/font/KouzanSousho.woff2) format("woff2");
 font-family: "UniHentaiKana";
   src: url(https://mmurak.github.io/HentaiGanaTransliterator/font/UniHentaiKana-Regular.woff2) format("woff2");
 }
@@ -8,7 +8,7 @@ font-family: "UniHentaiKana";
 body{
   display: flex;
   flex-direction: column;
-  font-family: 'UniHentaiKana', 'KouzanBrushFontOTF', 'Helvetica Neue', 'Lucida Sans Unicode', 'Arial Unicode MS', sans-serif;
+  font-family: 'UniHentaiKana', 'KouzanSousho', 'Helvetica Neue', 'Lucida Sans Unicode', 'Arial Unicode MS', sans-serif;
   font-size: 16px;
 }
 
