--- a/invertedL.css
+++ b/invertedL.css
@@ -1,6 +1,6 @@
 @font-face {
 font-family: "KouzanBrushFontOTF";
-  src: url(https://mmurak.github.io/HentaiGanaTransliterator/font/KouzanMouhituFontOTF) format("woff2");
+  src: url(https://mmurak.github.io/HentaiGanaTransliterator/font/KouzanBrushFontOTF.woff2) format("woff2");
 font-family: "UniHentaiKana";
   src: url(https://mmurak.github.io/HentaiGanaTransliterator/font/UniHentaiKana-Regular.woff2) format("woff2");
 }
@@ -70,5 +70,13 @@ main{
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
+}
+
+.fillerSection{
+  width: 4em;
+  text-align: left;
+  background-color: #fff;
+  color: #000;
+  font-size: 1.5em;
 }
 
